--- a/front-end/package.json
+++ b/front-end/package.json
@@ -7,6 +7,7 @@
     "@progress/kendo-dateinputs-react-wrapper": "^2019.4.1014",
     "@progress/kendo-drawing": "^1.6.0",
     "@progress/kendo-react-buttons": "^3.10.1",
+    "@progress/kendo-react-data-tools": "^3.10.1",
     "@progress/kendo-react-dateinputs": "^3.10.1",
     "@progress/kendo-react-dropdowns": "^3.10.1",
     "@progress/kendo-react-excel-export": "^3.10.1",
