--- a/API/package.json
+++ b/API/package.json
@@ -12,13 +12,23 @@
     "bcryptjs": "^2.4.3",
     "body-parser": "^1.19.0",
     "cors": "^2.8.5",
+    "del": "^5.1.0",
+    "exceljs": "^3.7.0",
     "express": "^4.17.1",
     "hapi": "^18.1.0",
     "jsonwebtoken": "^8.5.1",
+    "lokijs": "^1.5.8",
     "mssql": "^5.1.0",
     "multer": "^1.4.2",
     "passport": "^0.4.0",
     "passport-jwt": "^4.0.0",
     "passport-local": "^1.0.0"
+  },
+  "devDependencies": {
+    "@types/del": "^4.0.0",
+    "@types/express": "^4.17.2",
+    "@types/lokijs": "^1.5.3",
+    "@types/multer": "^1.4.0",
+    "typescript": "^3.7.5"
   }
 }
